@@ -1,6 +1,7 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Sub attrs in objs lazily-run to set value on first access
 
 1.06      2019-11-05 11:17:22-08:00 America/Los_Angeles
         - Fix for new() inputs not overriding class-set attributes in all contexts
